# ProjectOdyssey

./: .clinerules  .env  .gitattributes  .gitignore  .gitleaksignore  .lychee.toml  .lycheeignore  .markdownlint.json  .markdownlintignore  .mojo-version  .pre-commit-config.yaml  404.html  AGENT_CLAUDE4_UPDATE_SUMMARY.md  ANALYSIS_SUMMARY.txt  BACKWARD_PASS_FIX_PLAN.md  BLOCKER_FIXES_SUMMARY.md  BROADCAST_CRASH_FIX.md  BUILD_INSTRUCTIONS.md  BUILD_PACKAGE.md  CIFAR10_VALIDATION_REPORT.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_REVIEW.md  COMPREHENSIVE_REVIEW_FINDINGS.md  COMPREHENSIVE_TEST_VALIDATION_REPORT.md  CONTINUOUS_IMPROVEMENT_REPORT.md  CONTINUOUS_IMPROVEMENT_SESSION_COMPLETE.md  CONTRIBUTING.md  DATA_TEST_ANALYSIS_INDEX.md  DATA_TEST_FAILURE_ANALYSIS.md  DECISION_SUMMARY.md  DO_MERGE.py  Dockerfile  Dockerfile.ci  ERROR_DETAILS_TABLE.txt  EXECUTE_BUILD.md  EXTENSOR_DESIGN_ANALYSIS.md  FIXME_SUMMARY.md  FIX_GUIDE.md  (+72 more)
.claude/: ralph-loop.local.md  settings.json
.claude-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.templates/: dataset_template.mojo  layer_template.mojo  model_template.mojo  tests_template.mojo  training_template.mojo
MEMORY_REQUIREMENTS/: index.html
agents/: README.md  agent-hierarchy.md  delegation-rules.md  hierarchy.md  mojo_rules.md
api/: index.html
benchmarks/: README.md  __init__.mojo  bench_matmul.mojo  bench_mixed_precision.mojo  bench_simd.mojo  framework.mojo  reporter.mojo  simple_test.mojo  stats.mojo  test_framework.mojo
configs/: BEST_PRACTICES.md  COOKBOOK.md  README.md
(+3831 files in other folders)
